[project]
name = "kaggle-quickstart"
version = "0.1.0"
description = "A Kaggle-sourced notebook environment with selectable PyTorch accelerators"
requires-python = ">=3.11, <3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

# 1. Define the extras for each accelerator
[project.optional-dependencies]
cpu = ["torch", "torchvision"]
cu124 = ["torch", "torchvision"]
# Explicitly including triton-xpu to ensure smooth resolution with uv
xpu = ["torch", "torchvision", "triton-xpu", "pytorch-triton-xpu"]

# 2. Prevent users from mixing incompatible hardware wheels
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
    { extra = "xpu" },
  ],
]

# 3. Route specific extras to specific indexes
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
  { index = "pytorch-xpu", extra = "xpu" },
]
# Route both Triton packages to the XPU index
triton-xpu = [
  { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra = "xpu" },
]

# 4. Define the explicit index URLs
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
